--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .app-container {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-}
-
-.app-video-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  z-index: -1;
-}
-
-.app-content {
-  position: relative;
   width: 100%;
   min-height: 100vh;
 }
